--- a/client/public/index.html
+++ b/client/public/index.html
@@ -15,6 +15,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
     <title>React App</title>
+    <meta name="google-site-verification" content="QlBt0-MGroQXNck68pZ4IWvGXJpALlmFnFmyoLWb64A" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
