--- a/client/public/index.html
+++ b/client/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="./logo.png"/>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
@@ -14,7 +14,7 @@
 
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
-    <title>React App</title>
+    <title>EliteBazzar</title>
     <meta name="google-site-verification" content="QlBt0-MGroQXNck68pZ4IWvGXJpALlmFnFmyoLWb64A" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   </head>
